--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/css": "^11.11.2",
+    "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "axios": "^1.6.5",
+    "node-sass": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.2"
+    "react-icons": "^5.0.1",
+    "react-router-dom": "^6.21.2",
+    "sass": "^1.69.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
@@ -26,6 +29,7 @@
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "react-error-overlay": "^6.0.9",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
   }
