--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "sass": "^1.69.7"
   },
   "devDependencies": {
+    "@emotion/babel-plugin": "^11.11.0",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@types/react-google-recaptcha": "^2.1.9",
